<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_filter_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/filter_history_label"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_close"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        app:fabSize="mini"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_date_range"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/filter_date_range_label"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_filter_title"/>

    <TextView
        android:id="@+id/tv_start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/filter_start_date_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_date_range"/>

    <EditText
        android:id="@+id/et_start_date"
        android:layout_width="315dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/timestamp_date_format"
        android:inputType="date"
        android:padding="5dp"
        android:paddingEnd="15dp"
        app:layout_constraintTop_toBottomOf="@id/tv_start_date"/>

    <TextView
        android:id="@+id/tv_end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/filter_end_date_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_start_date"/>

    <EditText
        android:id="@+id/et_end_date"
        android:layout_width="315dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/timestamp_date_format"
        android:inputType="date"
        android:padding="5dp"
        android:paddingEnd="15dp"
        app:layout_constraintTop_toBottomOf="@id/tv_end_date"/>

    <Button
        android:id="@+id/btn_apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/apply_filters"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_end_date"/>

    <Button
        android:id="@+id/btn_clear_filters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/clear_filters"
        app:layout_constraintStart_toEndOf="@id/btn_apply"
        app:layout_constraintTop_toTopOf="@id/btn_apply"/>

</androidx.constraintlayout.widget.ConstraintLayout> 