<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DateFilterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="417dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_close"
            style="@style/SmartHat.Button"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:contentDescription="Close Filter"
            android:focusable="true"
            android:src="@drawable/cancel_button"
            app:backgroundTint="@android:color/darker_gray"
            app:layout_constraintBottom_toTopOf="@+id/tv_name_start_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:rippleColor="#0F5070" />

        <TextView
            android:id="@+id/tv_name_start_date"
            android:layout_width="315dp"
            android:layout_height="30dp"
            android:layout_marginTop="100dp"
            android:paddingBottom="8dp"
            android:text="@string/filter_start_date_label"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_start_date"
            android:layout_width="315dp"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="date"
            android:padding="12dp"
            android:paddingEnd="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name_start_date" />

        <TextView
            android:id="@+id/tv_name_end_date"
            android:layout_width="315dp"
            android:layout_height="30dp"
            android:layout_marginTop="4dp"
            android:paddingBottom="8dp"
            android:text="@string/filter_end_date_label"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_start_date" />

        <EditText
            android:id="@+id/et_end_date"
            android:layout_width="315dp"
            android:layout_height="50dp"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:inputType="date"
            android:padding="12dp"
            android:paddingRight="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name_end_date" />

        <Button
            android:id="@+id/btn_apply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="#0F5070"
            android:text="@string/apply_filters"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_end_date" />

        <Button
            android:id="@+id/btn_clear_filters"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/clear_filters"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_apply"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
